@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11822 2005/11/04 09:27:35 rillig Exp $
+$NetBSD: CHANGES,v 1.11823 2005/11/04 09:32:34 rillig Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -5074,3 +5074,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated pkgtools/pkglint to 4.34 [rillig 2005-11-04]
 	Added chat/iip version 1.1.0 [rillig 2005-11-04]
 	Updated pkgtools/pkglint to 4.35 [rillig 2005-11-04]
+	Updated pkgtools/pkglint to 4.36 [rillig 2005-11-04]
